[tool.poetry]
name = "flask-echo-server"
version = "0.1.0"
description = ""
authors = ["navsan <navsan@google.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flask-echo-server = "flask_echo_server:app"
